--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
           {% endif %}
           {% if site.facebook_username %}
           <li>
-            {% include icon-facebook_username.html username=site.facebook_username_username %}
+            {% include icon-facebook.html username=site.facebook_username %}
           </li>
           {% endif %}
         </ul>
