edit facebook icon

--- a/_includes/icon-facebook.html
+++ b/_includes/icon-facebook.html
@@ -1,1 +1,1 @@
-<a href="https://www.facebook.com/JeonggyuOh1990"><span class="icon icon--facebook">{% include icon-facebook.svg %}</span><span class="username">Dancesocially on Facebook</span></a>
+<a href="https://www.facebook.com/JeonggyuOh1990"><span class="icon icon--facebook">{% include icon-facebook.svg %}</span><span class="username">Facebook</span></a>
