--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,11 +24,11 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
-          {% if site.facebook_username %}
+          
           <li>
-            {% include icon-facebook.html username=site.facebook_username %}
+            {% include icon-facebook.html %}
           </li>
-          {% endif %}
+        
         </ul>
       </div>
 
